app-deployment-assignment/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-api
  namespace: default
  labels:
    app: hello-world-api
spec:
  type: ClusterIP
  selector:
    app: hello-world-api
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
